# geniusq-daas-platform

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package.json  start-demo.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.openai/: hosting.json
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  errors.py  main.py  schemas.py  seed.py
backend/app/api/: __init__.py  chat.py  dashboards.py  datasource.py  knowledge.py  requirements.py  settings.py
backend/app/domain/: __init__.py  config.py  model_defaults.py  real_estate.py
backend/app/repositories/: __init__.py  conversations.py  dashboards.py
backend/app/services/: __init__.py  analysis.py  conversation.py  conversation_charting.py  conversation_context.py  conversation_history.py  conversation_insights.py  conversation_sql_repair.py  conversation_trace.py  dashboards.py  datasource.py  feedback.py  knowledge.py  retrieval.py  semantic.py  sql_guard.py  text_to_sql.py
backend/tests/: conftest.py  test_analysis.py  test_chat_api.py  test_dashboards_api.py  test_datasource_api.py  test_db_seed.py  test_deepseek_chat.py  test_deployment_api.py  test_documentation.py  test_knowledge_api.py  test_model_settings_api.py  test_requirements_api.py  test_retrieval.py  test_semantic_metrics.py  test_settings_api.py  test_sql_guard.py  test_text_to_sql.py
docs/: 智能问数优化实施计划书.docx  智能问数优化实施计划书.md  需求追踪矩阵.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: build_plan_docx.py
tools/: build_plan_docx.py  copy-site-dist.mjs
(+65 files in other folders)
