[project]
name = "daas-intelligent-query-demo"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlmodel>=0.0.22,<1",
  "pydantic-settings>=2.5,<3",
  "httpx>=0.27,<1"
]

[project.optional-dependencies]
test = ["pytest>=8,<9", "pytest-cov>=5,<7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
